--- a/Transformer.ipynb
+++ b/Transformer.ipynb
@@ -2,22 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "The attention mask and the pad token id were not set. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n",
-      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Next word predicted by GPT-2: in\n"
+      "Next word predicted: morning\n"
      ]
     }
    ],
@@ -30,42 +22,7 @@
     "model = GPT2LMHeadModel.from_pretrained(\"gpt2\")\n",
     "\n",
     "# Predict next word using GPT-2 model\n",
-    "def predict_next_word_gpt2(text):\n",
-    "    input_ids = tokenizer.encode(text, return_tensors=\"pt\")\n",
-    "    output = model.generate(input_ids, max_length=20, num_return_sequences=1, no_repeat_ngram_size=2)\n",
-    "    predicted_token_ids = output[0][len(input_ids[0])-1]\n",
-    "    predicted_word = tokenizer.decode(predicted_token_ids)\n",
-    "    return predicted_word.strip()\n",
-    "\n",
-    "# Example usage\n",
-    "text = \"Sun rises in\"\n",
-    "predicted_word = predict_next_word_gpt2(text)\n",
-    "print(\"Next word predicted by GPT-2:\", predicted_word)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Next word predicted by GPT-2: morning\n"
-     ]
-    }
-   ],
-   "source": [
-    "from transformers import GPT2Tokenizer, GPT2LMHeadModel\n",
-    "import torch\n",
-    "\n",
-    "# Load pre-trained GPT-2 model and tokenizer\n",
-    "tokenizer = GPT2Tokenizer.from_pretrained(\"gpt2\")\n",
-    "model = GPT2LMHeadModel.from_pretrained(\"gpt2\")\n",
-    "\n",
-    "# Predict next word using GPT-2 model\n",
-    "def predict_next_word_gpt2(text):\n",
+    "def predict_next_word(text):\n",
     "    input_ids = tokenizer.encode(text, return_tensors=\"pt\")\n",
     "    with torch.no_grad():\n",
     "        output = model.generate(input_ids, max_length=len(input_ids[0])+1, num_return_sequences=1, no_repeat_ngram_size=2, pad_token_id=tokenizer.eos_token_id)\n",
@@ -75,31 +32,43 @@
     "\n",
     "# Example usage\n",
     "text = \"Sun rises in the\"\n",
-    "predicted_word = predict_next_word_gpt2(text)\n",
-    "print(\"Next word predicted by GPT-2:\", predicted_word)\n"
+    "predicted_word = predict_next_word(text)\n",
+    "print(\"Next word predicted:\", predicted_word)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting chardet\n",
-      "  Downloading chardet-5.2.0-py3-none-any.whl.metadata (3.4 kB)\n",
-      "Downloading chardet-5.2.0-py3-none-any.whl (199 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m199.4/199.4 kB\u001b[0m \u001b[31m4.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hInstalling collected packages: chardet\n",
-      "Successfully installed chardet-5.2.0\n",
+      "Requirement already satisfied: chardet in /home/rio/anaconda3/envs/py310/lib/python3.10/site-packages (5.2.0)\n",
+      "Requirement already satisfied: transformers in /home/rio/anaconda3/envs/py310/lib/python3.10/site-packages (4.39.3)\n",
+      "Requirement already satisfied: filelock in /home/rio/anaconda3/envs/py310/lib/python3.10/site-packages (from transformers) (3.13.1)\n",
+      "Requirement already satisfied: huggingface-hub<1.0,>=0.19.3 in /home/rio/anaconda3/envs/py310/lib/python3.10/site-packages (from transformers) (0.22.2)\n",
+      "Requirement already satisfied: numpy>=1.17 in /home/rio/anaconda3/envs/py310/lib/python3.10/site-packages (from transformers) (1.26.4)\n",
+      "Requirement already satisfied: packaging>=20.0 in /home/rio/anaconda3/envs/py310/lib/python3.10/site-packages (from transformers) (24.0)\n",
+      "Requirement already satisfied: pyyaml>=5.1 in /home/rio/anaconda3/envs/py310/lib/python3.10/site-packages (from transformers) (6.0.1)\n",
+      "Requirement already satisfied: regex!=2019.12.17 in /home/rio/anaconda3/envs/py310/lib/python3.10/site-packages (from transformers) (2023.12.25)\n",
+      "Requirement already satisfied: requests in /home/rio/anaconda3/envs/py310/lib/python3.10/site-packages (from transformers) (2.31.0)\n",
+      "Requirement already satisfied: tokenizers<0.19,>=0.14 in /home/rio/anaconda3/envs/py310/lib/python3.10/site-packages (from transformers) (0.15.2)\n",
+      "Requirement already satisfied: safetensors>=0.4.1 in /home/rio/anaconda3/envs/py310/lib/python3.10/site-packages (from transformers) (0.4.2)\n",
+      "Requirement already satisfied: tqdm>=4.27 in /home/rio/anaconda3/envs/py310/lib/python3.10/site-packages (from transformers) (4.66.2)\n",
+      "Requirement already satisfied: fsspec>=2023.5.0 in /home/rio/anaconda3/envs/py310/lib/python3.10/site-packages (from huggingface-hub<1.0,>=0.19.3->transformers) (2024.3.1)\n",
+      "Requirement already satisfied: typing-extensions>=3.7.4.3 in /home/rio/anaconda3/envs/py310/lib/python3.10/site-packages (from huggingface-hub<1.0,>=0.19.3->transformers) (4.10.0)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /home/rio/anaconda3/envs/py310/lib/python3.10/site-packages (from requests->transformers) (2.0.4)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /home/rio/anaconda3/envs/py310/lib/python3.10/site-packages (from requests->transformers) (3.4)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in /home/rio/anaconda3/envs/py310/lib/python3.10/site-packages (from requests->transformers) (2.1.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /home/rio/anaconda3/envs/py310/lib/python3.10/site-packages (from requests->transformers) (2024.2.2)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
-    "pip install chardet"
+    "pip install chardet transformers "
    ]
   }
  ],
